--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8090
 
 # para mysql 8 bbdd productos_ite
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hospital_vita?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/hospital_jakarta?serverTimezone=UTC
 spring.datasource.username=root
 # spring.datasource.password=root
 spring.datasource.password=AlumnoIFP
