--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hospital_jakarta?serverTimezone=UTC
 spring.datasource.username=root
 
-# spring.datasource.password=root
-spring.datasource.password=root
-
-# spring.datasource.password=AlumnoIFP
+#spring.datasource.password=root
+spring.datasource.password=AlumnoIFP
 
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
