--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.datasource.username=root
 # spring.datasource.password=root
 #spring.datasource.password=AlumnoIFP
 
-spring.datasource.password=root
-# spring.datasource.password=AlumnoIFP
+# spring.datasource.password=root
+spring.datasource.password=AlumnoIFP
 
 
 spring.jpa.generate-ddl=false
